--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "moshumanoid.sdk"
 version = "0.0.1"
-description = ""
+description = "A Python library for communication with MosHumanoid clients and servers"
 authors = ["Zijian Zhang <futrime@outlook.com>"]
 readme = "README.md"
 packages = [
@@ -10,6 +10,8 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.8"
+jsonschema = "^4.17.3"
+requests = "^2.28.2"
 
 
 [build-system]
