--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.8"
 jsonschema = "^4.17.3"
+httpx = "^0.24.0"
+termcolor = "^2.3.0"
+flask = "^2.3.1"
 
 
 [build-system]
